# dfir-attack-lab

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
analysis/: lateral_movement.py  log_correlator.py  mitre_mapper.py  sigma_eval.py  timeline_diff.py
analyzers/: __init__.py  network_conn_analyzer.py  powershell_artifact_analyzer.py  process_tree_analyzer.py
case/: packager.py
cli/: main.py
collectors/: container_forensics.py  memory_artifact_collector.py
dfir_attack_lab_cli/: __init__.py  cli.py  main.py  report.py  reporting.py
docs/: architecture.md  sample_attack_dataset.md
normalizers/: artifact_schema.py  case_id.py  models.py
parsers/: authlog.py  macos_unified_log.py  windows_evtx.py
tests/: test_analyze_process_tree_cli.py  test_artifact_schema.py  test_authlog_parser.py  test_authlog_user_filter.py  test_build_timeline_case_id_filter.py  test_build_timeline_cli.py  test_build_timeline_fail_on_gaps.py  test_build_timeline_hostname_filter.py  test_build_timeline_json_output_cli.py  test_build_timeline_min_severity.py  test_build_timeline_since_until.py  test_build_timeline_sort.py  test_build_timeline_timezone.py  test_case_packager.py  test_cli.py  test_cli_build_timeline.py  test_cli_parse_logs_fail_on_empty.py  test_cli_verify_case.py  test_collect_linux_output_dir.py  test_collect_macos_output_dir_cli.py  test_collector_case_ids.py  test_container_forensics.py  test_generate_report_case_id_filter.py  test_generate_report_cli.py  test_generate_report_min_severity.py  (+23 more)
(+23 files in other folders)
