[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dfir-attack-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "click>=8.0", "rich>=13.0"]

[project.scripts]
k1n-dfir = "cli.main:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
addopts = "--cov=cli --cov=collectors --cov=parsers --cov=timelines --cov-report=term-missing --cov-fail-under=70"

[tool.hatch.build]
dev-mode-dirs = ["."]

[tool.hatch.build.targets.wheel]
packages = [
  "analysis",
  "analyzers",
  "case",
  "cli",
  "collectors",
  "normalizers",
  "parsers",
  "timelines",
]
