[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dfir-attack-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "click>=8.0", "rich>=13.0"]

[project.scripts]
k1n-dfir = "dfir_attack_lab_cli.main:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
addopts = "--cov=cli --cov=collectors --cov=parsers --cov=timelines --cov-report=term-missing --cov-fail-under=70"

[tool.setuptools]
packages = [
  "analysis",
  "analyzers",
  "case",
  "cli",
  "collectors",
  "collectors.linux",
  "collectors.macos",
  "collectors.windows",
  "dfir_attack_lab_cli",
  "normalizers",
  "parsers",
  "timelines",
]
